@@ -1,3 +1,7 @@
+2009-01-06  Valentin Hilbig  <tino@zoo.03.softkill.net>
+
+	* xd.h (tino_xd_init, tino_xd_flush, tino_xd_do, tino_xd_exit): added
+
 2008-11-03  Valentin Hilbig  <tino@zoo.03.softkill.net>
 
 	* sock_tool.h (tino_sock_wrapO): Bugfix on dupping wrapped fd to
